# rdial

./: .coveragerc  .editorconfig  .gitignore  .projections.json  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  NEWS.rst  README.rst  nose2.cfg  rdial.py  setup.cfg  setup.py  tox.ini  unittest.cfg
.github/: ISSUE_TEMPLATE.rst
doc/: alternatives.rst  background.rst  conf.py  config.rst  envvars.rst  faq.rst  future.rst  getting_started.rst  index.rst  rdial.1.rst  release.rst  taskbars.rst  todo.rst  usage.rst  wordlist.txt
doc/api/: Event.rst  commandline.rst  errors.rst  index.rst  utils.rst
extra/: _rdial  doap.rdf  requirements-base.txt  requirements-dev.txt  requirements-doc.txt  requirements-py26.txt  requirements-py31.txt  requirements-test.txt  requirements.txt  timew_export.py  timew_import.py
features/: datetime.feature  delta.feature  environment.py  event.feature  event_filter.feature  event_query.feature  event_triggers.feature  event_upgrades.feature
features/data/: date_filtering.txt  test.txt  test_no_header.txt  test_no_message_field.txt  test_not_running.txt
features/step_definitions/: event.py  generic.py  iso_datetime.py  iso_delta.py  util.py
features/steps/: event.py  generic.py  iso_datetime.py  iso_delta.py  util.py
rdial/: __init__.py  _version.py  cmdline.py  compat.py  config  defaults.cfg  events.py  i18n.py  utils.py
rdial/cli/: base.py  last.py  ledger.py  report.py  running.py  start.py  stop.py  switch.py
rdial/locale/: rdial.pot
tests/: events_tests.py  repr_tests.py  test_attrdict.py  test_cmdline.py  test_compat.py  test_datetime.py  test_delta.py  test_event.py  test_event_filter.py  test_event_query.py  test_event_triggers.py  test_events.py  test_fsck.py  test_repr.py  test_setup_py.py  test_utils.py  test_week.py  test_xdg_basedir.py  xdg_basedir_tests.py
tests/data/: color.ini  defaults.ini  local.ini  no_color.ini  stacking.ini  wrappers.ini
tests/data/date_filtering/: task.csv  task2.csv
tests/data/faulty_csv/: task.csv
tests/data/requires/: markers.txt  plain.txt  recurse.txt
tests/data/test/: task.csv
tests/data/test_fsck/: task2.csv
tests/data/test_fsck_future/: task.csv
tests/data/test_not_running/: task.csv  task2.csv
