[metadata]
name = rdial
author = James Rowe
author-email = jnrowe@gmail.com
home-page  = https://github.com/JNRowe/rdial/
summary = Simple time tracking for simple people
description-file = README.rst
license = GPL-3
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Topic :: Office/Business
    Topic :: Office/Business :: News/Diary
    Topic :: Office/Business :: Scheduling
    Topic :: Other/Nonlisted Topic
    Topic :: Text Processing :: Filters
    Topic :: Utilities
keywords =
    timetracking
    task
    report

[aliases]
build_dist = sdist --formats=gztar,bztar,zip

[build_sphinx]
all-files = 1

[compile_catalog]
directory = rdial/locale
statistics = true

[extract_messages]
output-file = rdial/locale/rdial.pot

[init_catalog]
input-file = rdial/locale/rdial.pot
output-dir = rdial/locale

[update_catalog]
input-file = rdial/locale/rdial.pot
output-dir = rdial/locale
ignore-obsolete = true

[wheel]
universal = 1

[entry_points]
console_scripts =
    rdial = rdial.cmdline:main
