[aliases]
build_dist = bdist_wheel sdist --formats=gztar,bztar,zip
build_sphinx_dev = build_sphinx --all-files --fresh-env --warning-is-error

[compile_catalog]
domain = rdial
directory = rdial/locale
statistics = true

[coverage:run]
branch = True
omit =
    rdial/__init__.py
    rdial/_version.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
fail_under = 96
precision = 2
skip_covered = True

[extract_messages]
msgid-bugs-address = https://github.com/JNRowe/rdial/issues
output-file = rdial/locale/rdial.pot

[init_catalog]
domain = rdial
input-file = rdial/locale/rdial.pot
output-dir = rdial/locale

[flake8]
copyright-check = True
copyright-min-file-size = 1
copyright-regexp = Copyright © 20\d{2}(-20\d{2})? {2}
exclude = .git,build,maybe,rdial/_version.py
ignore = P101
max-complexity = 6
select = C,E,F,W,B,B901,B902,B903,B950

[metadata]
name = rdial
author = James Rowe
author_email = jnrowe@gmail.com
description = Simple time tracking for simple people
keywords = timetracking task report
packages = rdial
include_package_data = True
package_data = {'': ['config', 'rdial/locale/*/LC_MESSAGES/*.mo']}
entry_points = {'console_scripts': ['rdial = rdial.cmdline:main', ]}
license = GPL-3
url = https://github.com/JNRowe/rdial
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Office/Business
    Topic :: Office/Business :: News/Diary
    Topic :: Office/Business :: Scheduling
    Topic :: Other/Nonlisted Topic
    Topic :: Utilities

[pycodestyle]
select = E, W

[pydocstyle]
select = D203,D212,D404

[tool:pytest]
addopts =
    --cov rdial --cov-report term-missing --no-cov-on-fail
    --durations=5
    --strict
minversion = 3.2

[update_catalog]
domain = rdial
input-file = rdial/locale/rdial.pot
output-dir = rdial/locale
ignore-obsolete = true
