[aliases]
build_dist = bdist_wheel sdist --formats=gztar,bztar,zip
build_sphinx_dev = build_sphinx --all-files --fresh-env --warning-is-error

[coverage:run]
branch = True
omit =
    rdial/__init__.py
    rdial/_version.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
fail_under = 98
precision = 2
skip_covered = True

[flake8]
copyright-check = True
copyright-min-file-size = 1
copyright-regexp = Copyright © 20\d{2}(-20\d{2})? {2}
exclude = .git,build,maybe,rdial/_version.py
ignore = P101
max-complexity = 6
select = C,E,F,W,B,B901,B902,B903,B950

[metadata]
name = rdial
version = attr: rdial._version.dotted
author = James Rowe
author_email = jnrowe@gmail.com
description = Simple time tracking for simple people
long_description = file: README.rst
keywords = timetracking, task, report
license = GPL-3
url = https://github.com/JNRowe/rdial
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Office/Business
    Topic :: Office/Business :: News/Diary
    Topic :: Office/Business :: Scheduling
    Topic :: Other/Nonlisted Topic
    Topic :: Utilities
python_requires = >=3.6
project_urls =
    Contributors = https://github.com/JNRowe/rdial/contributors/
    Documentation = https://rdial.readthedocs.io/
    Git repository = https://github.com/JNRowe/rdial/
    Issue tracker = https://github.com/JNRowe/rdial/issues/
setup_requires = setuptools>=40.0.0

[options]
include_package_data = True
packages = rdial
zip_safe = True

[options.entry_points]
console_scripts =
    rdial = rdial.cmdline:main

[options.package_data]
* = config

[pycodestyle]
select = E, W

[pydocstyle]
select = D203,D212,D404

[tool:pytest]
addopts =
    --cov rdial --cov-report term-missing --no-cov-on-fail
    --durations=5
    --strict
minversion = 4.0
